- Added new large button - Increased spacing at the top of inside pages - Adjusted language-picker font to swap for an alternative while it downloads to avoid FOIT

--- a/src/SIL.XForge.Scripture/wwwroot/scss/_home.scss
+++ b/src/SIL.XForge.Scripture/wwwroot/scss/_home.scss
@@ -237,10 +237,8 @@
   .statement-buttons {
     a {
       margin: 0 20px;
-      font-size: 18px;
       @include media-breakpoint-down(xs) {
         margin: 0 10px;
-        font-size: 16px;
       }
     }
   }
