--- a/src/SIL.XForge.Scripture/wwwroot/scss/_learn_more.scss
+++ b/src/SIL.XForge.Scripture/wwwroot/scss/_learn_more.scss
@@ -191,10 +191,4 @@
       font-size: 22px;
     }
   }
-  a {
-    font-size: 18px;
-    @include media-breakpoint-down(xs) {
-      font-size: 16px;
-    }
-  }
 }
